--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="2.2" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="21"
+        android:targetSdkVersion="21" />
 
     <!-- baidu_map base permission -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -59,7 +59,10 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>  
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+
     <application
         android:name="com.watch.customer.app.MyApplication"
         android:allowBackup="true"
@@ -160,6 +163,17 @@
         <activity android:name="com.watch.customer.ui.ShopMenuAddSumActivity" >
         </activity>
 
+        <activity android:name="com.watch.customer.ui.DeviceListActivity" >
+        </activity>
+        <activity android:name="com.watch.customer.ui.CameraActivity" >
+        </activity>
+        <activity android:name="com.watch.customer.ui.LocationActivity" >
+        </activity>
+        <activity android:name="com.watch.customer.ui.SettingActivity" >
+        </activity>
+        <activity android:name="com.watch.customer.ui.InfoActivity" >
+        </activity>
+
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="YoLes7xOMF7gOpGawfbTdCw6" >
@@ -203,6 +217,13 @@
                 
             </intent-filter>
         </service>
+
+        <service android:name="com.watch.customer.service.UartService"
+            android:enabled="true"
+            android:exported="false">
+
+        </service>
+
         
         <!-- Required SDK核心功能-->
         <receiver
