--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile files('libs/jpush-sdk-release1.7.1.jar')
     compile files('libs/locSDK_4.1.jar')
     compile files('libs/universal-image-loader-1.5.6-with-src.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
