--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,16 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile files('libs/alipay.jar')
-    compile files('libs/baidumapapi_v3_2_0.jar')
     compile files('libs/httpcore-4.3.3.jar')
     compile files('libs/httpmime-4.3.6.jar')
     compile files('libs/jpush-sdk-release1.7.1.jar')
-    compile files('libs/locSDK_4.1.jar')
     compile files('libs/universal-image-loader-1.5.6-with-src.jar')
+    compile files('libs/baidumapapi_base_v3_7_1.jar')
+    compile files('libs/baidumapapi_cloud_v3_7_1.jar')
+    compile files('libs/baidumapapi_map_v3_7_1.jar')
+    compile files('libs/baidumapapi_radar_v3_7_1.jar')
+    compile files('libs/baidumapapi_search_v3_7_1.jar')
+    compile files('libs/baidumapapi_util_v3_7_1.jar')
+    compile files('libs/locSDK_6.13.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
