--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uacent.watchapp"
-    android:versionCode="15"
-    android:versionName="2.2" >
+    android:versionCode="1"
+    android:versionName="@string/app_versionName" >
 
     <uses-sdk
         android:minSdkVersion="21"
@@ -187,6 +187,8 @@
         <activity android:name="com.watch.customer.ui.AntiLostSettingActivity"> </activity>
         <activity android:name="com.watch.customer.ui.FindmeSettingActivity"> </activity>
         <activity android:name="com.watch.customer.ui.RingtoneSelectActivity"> </activity>
+        <activity android:name="com.watch.customer.ui.PasswordSettingActivity"> </activity>
+        <activity android:name="com.watch.customer.ui.InputPasswordActivity"> </activity>
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
