--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile files('libs/alipay.jar')
     compile files('libs/httpcore-4.3.3.jar')
     compile files('libs/httpmime-4.3.6.jar')
-    compile files('libs/jpush-sdk-release1.7.1.jar')
+    //compile files('libs/jpush-sdk-release1.7.1.jar')
     compile files('libs/universal-image-loader-1.5.6-with-src.jar')
     compile files('libs/baidumapapi_base_v3_7_1.jar')
     compile files('libs/baidumapapi_cloud_v3_7_1.jar')
