--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
         android:label="@string/system_name"
         android:theme="@style/AppTheme" >
         <activity android:name="com.watch.customer.ui.FirstActivity"
+            android:screenOrientation="portrait"
             android:icon="@android:drawable/sym_def_app_icon">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -81,13 +82,14 @@
             </intent-filter>
         </activity>
         <activity android:name="com.watch.customer.ui.MainActivity"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop">
         </activity>
-        <activity android:name="com.watch.customer.ui.AuthLoginActivity" >
+        <activity android:name="com.watch.customer.ui.AuthLoginActivity" android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="com.watch.customer.ui.AuthRegisterActivity" >
+        <activity android:name="com.watch.customer.ui.AuthRegisterActivity" android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="com.watch.customer.ui.FindPasswordActivity" >
+        <activity android:name="com.watch.customer.ui.FindPasswordActivity" android:screenOrientation="portrait">
         </activity>
         <activity android:name="com.watch.customer.ui.ShopDetailActivity" >
         </activity>
@@ -142,7 +144,7 @@
         </activity>
         <activity android:name="com.watch.customer.ui.OrderDealDetailActivity" >
         </activity>
-        <activity android:name="com.watch.customer.ui.PersonInfoActivity" >
+        <activity android:name="com.watch.customer.ui.PersonInfoActivity" android:screenOrientation="portrait" >
         </activity>
         <activity android:name="com.watch.customer.ui.PersonMainActivity" >
         </activity>
@@ -167,34 +169,34 @@
         <activity android:name="com.watch.customer.ui.ShopMenuAddSumActivity" >
         </activity>
 
-        <activity android:name="com.watch.customer.ui.DeviceListActivity"
+        <activity android:name="com.watch.customer.ui.DeviceListActivity" android:screenOrientation="portrait"
             >
         </activity>
-        <activity android:name="com.watch.customer.ui.CameraActivity" >
+        <activity android:name="com.watch.customer.ui.CameraActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.watch.customer.ui.LocationActivity" >
+        <activity android:name="com.watch.customer.ui.LocationActivity" android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="com.watch.customer.ui.SettingActivity" >
+        <activity android:name="com.watch.customer.ui.SettingActivity" android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="com.watch.customer.ui.InfoActivity" >
+        <activity android:name="com.watch.customer.ui.InfoActivity" android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name="com.watch.customer.ui.BtDeviceSettingActivity" >
+        <activity android:name="com.watch.customer.ui.BtDeviceSettingActivity" android:screenOrientation="portrait">
         </activity>
 
         <activity android:name="com.watch.customer.ui.SelectPicPopupWindow" android:theme="@style/MyDialogStyleBottom" >
         </activity>
 
-        <activity android:name="com.watch.customer.ui.AntiLostSettingActivity"> </activity>
-        <activity android:name="com.watch.customer.ui.FindmeSettingActivity"> </activity>
-        <activity android:name="com.watch.customer.ui.RingtoneSelectActivity"> </activity>
-        <activity android:name="com.watch.customer.ui.PasswordSettingActivity"> </activity>
-        <activity android:name="com.watch.customer.passlock.InputPasswordActivity"
+        <activity android:name="com.watch.customer.ui.AntiLostSettingActivity" android:screenOrientation="portrait"> </activity>
+        <activity android:name="com.watch.customer.ui.FindmeSettingActivity" android:screenOrientation="portrait"> </activity>
+        <activity android:name="com.watch.customer.ui.RingtoneSelectActivity" android:screenOrientation="portrait"> </activity>
+        <activity android:name="com.watch.customer.ui.PasswordSettingActivity" android:screenOrientation="portrait"> </activity>
+        <activity android:name="com.watch.customer.passlock.InputPasswordActivity" android:screenOrientation="portrait"
                     android:launchMode="singleInstance" >
         </activity>
-        <activity android:name="com.watch.customer.passlock.VerifyPasswordActivity"></activity>
+        <activity android:name="com.watch.customer.passlock.VerifyPasswordActivity" android:screenOrientation="portrait"></activity>
         <activity android:name="com.watch.customer.ui.MapSelectActivity"> </activity>
-        <activity android:name="com.watch.customer.ui.LocationRecordList"> </activity>
+        <activity android:name="com.watch.customer.ui.LocationRecordList" android:screenOrientation="portrait"> </activity>
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
@@ -208,6 +210,7 @@
         </service>
          <!-- 极光推送 -->
          <!-- Required SDK核心功能-->
+        <!--
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
@@ -218,15 +221,19 @@
                 <category android:name="com.fdcz.zsct" />
             </intent-filter>
         </activity>
+        -->
 
         <!-- Required  SDK核心功能-->
+        <!--
         <service
             android:name="cn.jpush.android.service.DownloadService"
             android:enabled="true"
             android:exported="false" >
         </service>
+        -->
 
         <!-- Required SDK 核心功能-->
+        <!--
         <service
             android:name="cn.jpush.android.service.PushService"
             android:enabled="true"
@@ -239,6 +246,7 @@
                 
             </intent-filter>
         </service>
+        -->
 
         <service android:name="com.watch.customer.service.UartService"
         android:enabled="true"
@@ -270,12 +278,11 @@
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
--->
-        
-        <!-- Required SDK核心功能-->
-        <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 
+        <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
+-->
         <!-- User defined.  For test only  用户自定义的广播接收器-->
+
         <receiver
             android:name="com.watch.customer.ui.MyReceiver"
             android:enabled="true">
