--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.android.support:appcompat-v7:21.+'
 
     compile files('libs/alipay.jar')
     compile files('libs/httpcore-4.3.3.jar')
