--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,14 +71,14 @@
     <application
         android:name="com.watch.customer.app.MyApplication"
         android:allowBackup="true"
-        android:icon="@android:drawable/sym_def_app_icon"
+        android:icon="@drawable/ic_launcher"
         android:largeHeap="true"
         android:label="@string/system_name"
         android:theme="@style/AppTheme" >
         <activity android:name="com.watch.customer.ui.FirstActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize"
-            android:icon="@android:drawable/sym_def_app_icon">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
