google map support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,35 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'Google Inc.:Google APIs:21'
-    buildToolsVersion "22.0.1"
-
+    signingConfigs {
+        config {
+            keyAlias 'overseakey'
+            keyPassword 'overseaantilost'
+            storeFile file('D:/prog/java/AntiLost/oversea.keystore')
+            storePassword 'overseaantilost'
+        }
+    }
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.uacent.watchapp"
         minSdkVersion 19
-        targetSdkVersion 19
+        targetSdkVersion 23
     }
-
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+        debug {
+            buildConfigField "String", "oversea", "\"0\""
+        }
+        oversea {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            buildConfigField "String", "oversea", "\"1\""
+            signingConfig signingConfigs.config
         }
     }
 }
@@ -34,9 +49,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.android.support:appcompat-v7:21.+'
-
     compile files('libs/alipay.jar')
     compile files('libs/httpcore-4.3.3.jar')
     compile files('libs/httpmime-4.3.6.jar')
@@ -49,5 +61,7 @@ dependencies {
     compile files('libs/baidumapapi_search_v3_7_1.jar')
     compile files('libs/baidumapapi_util_v3_7_1.jar')
     compile files('libs/locSDK_6.13.jar')
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
 }
