修改logo，应用名称   优化对话框 升级版本1.20.1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:largeHeap="true"
-        android:label="@string/system_name"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name="com.watch.customer.ui.FirstActivity"
             android:screenOrientation="portrait"
